tests/rosetta/transpiler/C/cantor-set.c
// Generated by Mochi 0.10.32 on 2025-08-02 20:52 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

typedef struct Anon3 Anon3;
typedef struct Anon4 Anon4;
typedef struct Data2 Data2;
typedef struct Stack Stack;

struct Anon3 {
    int index;
    int len;
    int start;
};

struct Anon4 {
    long long start;
    long long len;
    long long index;
};

struct Data2 {
    long long start;
    long long len;
    long long index;
};

struct Stack {
    long long start;
    long long len;
    long long index;
};

long long width = 81LL;
long long height = 5LL;
const char* lines_init[0] = {};
const char* *lines = lines_init;
size_t lines_len = 0;
MapSI *stack = NULL;
size_t stack_len = 0;

const char* setChar(const char* s, long long idx, const char* ch);
int main(void);

const char* setChar(const char* s, long long idx, const char* ch) {
    return str_concat(str_concat(_substring(s, 0LL, idx), ch), _substring(s, idx + 1LL, strlen(s)));
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        for (int i = 0LL; i < height; i++) {
            const char* row = "";
            int j = 0LL;
            while (j < width) {
                row = str_concat(row, "*");
                j = j + 1LL;
            }
            lines = list_append_str(lines, &lines_len, row);
        }
        stack = (Stack[]){ (Stack){.start = 0LL, .len = width, .index = 1LL} };
        while (1LL) {
            MapSI frame = stack[(int)(0LL)];
            stack = _substring(stack, 0, 0LL);
            long long start = frame[(int)("start")];
            long long lenSeg = frame[(int)("len")];
            long long index = frame[(int)("index")];
            int seg = lenSeg / 3LL;
            if (seg == 0LL) {
                continue;
            }
            long long i = index;
            while (i < height) {
                int j = start + seg;
                while (j < (start + (2LL * seg))) {
                    lines[(int)(i)] = setChar(lines[(int)(i)], j, " ");
                    j = j + 1LL;
                }
                i = i + 1LL;
            }
            stack = (Anon3[]){ (Anon3){.index = 1LL, .len = 81LL, .start = 0LL}, (Anon4){.start = start, .len = seg, .index = index + 1LL} };
            stack = (Anon3[]){ (Anon3){.index = 1LL, .len = 81LL, .start = 0LL}, (Anon4){.start = start + (seg * 2LL), .len = seg, .index = index + 1LL} };
        }
        for (size_t __i = 0; __i < lines_len; __i++) {
            const char* line = lines[__i];
            puts(line);
        }
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
